--- a/gumshuda/sighting/templates/index.html
+++ b/gumshuda/sighting/templates/index.html
@@ -23,4 +23,7 @@
 
             <p class="footer">All the code is available in the <a href="https://github.com/robnyman/robnyman.github.com/tree/master/camera-api">Camera API repository on GitHub</a>.</p>
         </div>
+        <script type="text/javascript"> 
+        	var csrf_token = "{{csrf_token}}"
+		</script>
 <script src="{% static 'js/base.js' %}"></script>
