--- a/gumshuda/sighting/templates/home.html
+++ b/gumshuda/sighting/templates/home.html
@@ -1,7 +1,2 @@
-{% if user and not user.is_anonymous %}
-  <a>Hello, {{ user.get_full_name }}!</a>
-  <br>
-  <a href="/logout">Logout</a>
-{% else %}
-  <a href="{% url 'social:begin' 'twitter' %}?next={{ request.path }}">Login with Twitter</a>
-{% endif %}
+<h1>Welcome</h1>
+<p><a href="/logout">Logout</a>
