--- a/gumshuda/sighting/templates/login.html
+++ b/gumshuda/sighting/templates/login.html
@@ -3,5 +3,5 @@
   <br>
   <a href="/logout">Logout</a>
 {% else %}
-  <a href="{% url 'social:begin' 'twitter' %}?next={{ request.path }}">Login with Twitter</a>
+  <a href="{% url 'social:begin' 'twitter' %}?next={{ request.path }}">Login with facebook</a>
 {% endif %}
